Changed menubar to show patient id and dob Fixed image alignment in xray modal

--- a/common/directives/modal/modal.less
+++ b/common/directives/modal/modal.less
@@ -14,10 +14,13 @@
   -moz-transform: translateX(-50%) translateY(-50%);
   -ms-transform: translateX(-50%) translateY(-50%);
   transition: 0.3s all;
+  overflow: auto;
+//  border: 1px soli/d #92c1cc;
+  box-shadow: 0px 0px 40px 0px fadeout(#1e3439, 70%);
 
-  border: 1px solid @borderColor;
   &.ng-animate {
     border: 1px solid transparent;
+
   }
   // The modals content
   .mmodal-content {
