--- a/css/style.css
+++ b/css/style.css
@@ -1340,7 +1340,8 @@ html[xmlns] .clearfix {
   -moz-transform: translateX(-50%) translateY(-50%);
   -ms-transform: translateX(-50%) translateY(-50%);
   transition: 0.3s all;
-  border: 1px solid #dbe1e3;
+  overflow: auto;
+  box-shadow: 0px 0px 40px 0px rgba(30, 52, 57, 0.30000000000000004);
 }
 .mmodal.ng-animate {
   border: 1px solid transparent;
@@ -1473,8 +1474,13 @@ html[xmlns] .clearfix {
   width: 50%;
   background-color: black;
   overflow: hidden;
+  line-height: 100%;
 }
 .xray-modal .xray-modal-image img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
   width: 100%;
 }
 .xray-modal .xray-modal-content {
