--- a/css/style/xray_modal.less
+++ b/css/style/xray_modal.less
@@ -10,8 +10,13 @@
     width: 50%;
     background-color: black;
     overflow: hidden;
+    line-height: 100%;
 
     img {
+      position:absolute;
+      top:0;
+      bottom:0;
+      margin:auto;
       width: 100%;
     }
   }
